--- a/web_screen/app/src/main/res/layout/activity_main.xml
+++ b/web_screen/app/src/main/res/layout/activity_main.xml
@@ -130,9 +130,9 @@
 
     </ScrollView>
 
-    <RelativeLayout
-        android:id="@+id/adLayout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+<!--    <RelativeLayout-->
+<!--        android:id="@+id/adLayout"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent"/>-->
 </LinearLayout>
 
